# kireta

./: README.md  compose.yaml
.devcontainer/: devcontainer.json
android/: .devcontainer.json  App.tsx  Dockerfile  _env  app.config.json  app.config.ts  app.json  babel.config.js  package-lock.json  package.json
android/components/: HistoryScreen.tsx  ItemScreen.tsx  ListScreen.tsx  StoreContext.tsx  TabScreen.tsx  TodayScreen.tsx  WasmContextProvider.tsx
android/components/TodayScreen/components/: ListItem.tsx
android/components/TodayScreen/hooks/: index.ts  useTodayScreen.ts
android/components/TodayScreen/types/: check_list.ts  item.ts  store.ts
android/hooks/: useConfig.ts
android/src/components/: HistoryScreen.tsx  ItemScreen.tsx  ListScreen.tsx  Root.tsx  StoreContext.tsx  TabScreen.tsx  TodayScreen.tsx
android/src/components/HistoryScreen/hooks/: useHistoryScreen.ts
android/src/hooks/: useConfig.ts
android/src/types/: check_list.ts  item.ts  navigation.ts  store.ts
android/types/: navigation.ts
assets/: index.html
crates/wasm/: Cargo.toml
crates/web/: Cargo.toml
crates/web/src/: handler.rs  main.rs  model.rs  query.rs  store.rs  test_utils.rs  use_case.rs
crates/web/src/infra/: store.rs
crates/web/src/query/: check_list.rs  item.rs  store.rs
firebase/: Dockerfile  firebase.json  firestore.rules
rust/: .devcontainer.json  Dockerfile
rust/crates/firestore-path/: Cargo.toml  README.md
rust/crates/firestore-path/src/: collection_id.rs  collection_name.rs  collection_path.rs  database_id.rs  database_name.rs  document_id.rs  document_name.rs  document_path.rs  project_id.rs
rust/crates/firestore-path/tests/: lib.rs
rust/crates/web/: Cargo.toml
rust/crates/web/graphql/: test_add.graphql
rust/crates/web/src/: app.rs  handler.rs  infra.rs  main.rs  model.rs  mutation.rs  query.rs  test_utils.rs  use_case.rs
rust/crates/web/src/handler/: graphql.rs  root.rs
rust/crates/web/src/handler/graphql/: graphql_data.rs  graphql_schema.rs  query.rs
rust/crates/web/src/handler/graphql/query/: check.rs  check_list.rs  item.rs
rust/crates/web/src/infra/: firestore.rs  firestore_store.rs  store.rs
rust/crates/web/src/infra/firestore/: client.rs  document.rs  path.rs  timestamp.rs
rust/crates/web/src/query/: check_list.rs  item.rs
(+9 files in other folders)
